--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zenb0t.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://https://zenb0t.github.io/",
+  "homepage": "https://zenb0t.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
