--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Zenb0t",
+  "name": "Felipe Ribeiro Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
